--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,24 @@
   <groupId>edu.escuelaing.arep</groupId>
   <artifactId>Server</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>7</source><target>7</target></configuration></plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>5</source>
+            <target>5</target>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>16</source>
+            <target>16</target>
+        </configuration>
+    </plugin>
+</plugins></build>
   <name>Server</name>
   <url>http://maven.apache.org</url>
   <dependencies>
